--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -382,10 +382,14 @@
     <string name="consider_disable_battery_optimizations">Consider disable battery optimizations</string>
     <string name="consider_enable_battery_optimizations">Consider enable battery optimizations</string>
 
-  <string name="pref_isolate_dest">Isolate destination addresses</string>
-  <string name="pref_isolate_dest_summary">Use a different circuit for each destination address</string>
-  <string name="pref_connection_padding">Connection padding</string>
-  <string name="pref_connection_padding_summary">Always enables connection padding to defend against some forms of traffic analysis. Default: auto</string>
-  <string name="pref_reduced_connection_padding">Reduced connection padding</string>
-  <string name="pref_reduced_connection_padding_summary">Closes relay connections sooner and sends less padding packets to reduce data and battery usage</string>
+    <string name="pref_isolate_dest">Isolate destination addresses</string>
+    <string name="pref_isolate_dest_summary">Use a different circuit for each destination address</string>
+    <string name="pref_connection_padding">Connection padding</string>
+    <string name="pref_connection_padding_summary">Always enables connection padding to defend against some forms of traffic analysis. Default: auto</string>
+    <string name="pref_reduced_connection_padding">Reduced connection padding</string>
+    <string name="pref_reduced_connection_padding_summary">Closes relay connections sooner and sends less padding packets to reduce data and battery usage</string>
+    <string name="pref_prefer_ipv6">Prefer IPv6 connections</string>
+    <string name="pref_prefer_ipv6_summary">Tells exits that IPv6 addresses are preferred</string>
+    <string name="pref_disable_ipv4">Disable IPv4 connections</string>
+    <string name="pref_disable_ipv4_summary">Tells exits not to connect to IPv4 addresses</string>
 </resources>
