--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,7 @@
   <!--END Welcome Wizard strings (DJH)-->
   <string name="connect_first_time">You\'ve successfully connected to the Tor network - but this does NOT mean your device is secure. You can use the \'Browser\' button to test your connection. \n\nVisit us at https://guardianproject.info/apps/orbot or send an email to help@guardianproject.info to learn more.</string>
   <string name="tor_check">This will open your web browser to https://check.torproject.org in order to see if Orbot is probably configured and you are connected to Tor.</string>
-  <string name="pref_hs_group">Hidden Service Hosting</string>
+  <string name="pref_hs_group">Onion Service Hosting</string>
   <string name="pref_general_group">General</string>
   <string name="pref_start_boot_title">Start Orbot on Boot</string>
   <string name="pref_start_boot_summary">Automatically start Orbot and connect Tor when your Android device boots</string>
@@ -202,11 +202,11 @@
   <string name="reachable_ports">Reachable ports</string>
   <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
   <string name="enter_ports">Enter ports</string>
-  <string name="enable_hidden_services">Hidden Service Hosting</string>
+  <string name="enable_hidden_services">Onion Service Hosting</string>
   <string name="run_servers_accessible_via_the_tor_network">allow on-device server to be accessible via the Tor network</string>
-  <string name="enter_localhost_ports_for_hidden_services">enter localhost ports for hidden services</string>
-  <string name="hidden_service_ports">Hidden Service Ports</string>
-  <string name="the_addressable_name_for_your_hidden_service_generated_automatically_">the addressable name for your hidden service (generated automatically)</string>
+  <string name="enter_localhost_ports_for_hidden_services">enter localhost ports for Onion services</string>
+  <string name="hidden_service_ports">Onion Service Ports</string>
+  <string name="the_addressable_name_for_your_hidden_service_generated_automatically_">the addressable name for your Onion service (generated automatically)</string>
   <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">enable debug log to output (must use adb or aLogCat to view)</string>
   <string name="project_home">Project Home(s): </string>
   <string name="project_urls">https://www.torproject.org/docs/android\nhttps://guardianproject.info/apps/orbot/</string>
@@ -218,11 +218,11 @@
   <string name="iptables_version">IPtables v1.4.21: http://www.netfilter.org</string>
   <string name="obfsproxy_version">Obfs4proxy v0.0.8: https://github.com/Yawning/obfs4</string>
   <string name="openssl_version">OpenSSL v1.1.1g: http://www.openssl.org</string>
-  <string name="hidden_service_request">An app wants to open hidden server port %1$s to the Tor network. This is safe if you trust the app.</string>
+  <string name="hidden_service_request">An app wants to open Onion server port %1$s to the Tor network. This is safe if you trust the app.</string>
   <string name="found_existing_tor_process">found existing Tor process&#8230;</string>
   <string name="something_bad_happened">Something bad happened. Check the log</string>
-  <string name="hidden_service_on">hidden service on:</string>
-  <string name="unable_to_read_hidden_service_name">unable to read hidden service name</string>
+  <string name="hidden_service_on">Onion service on:</string>
+  <string name="unable_to_read_hidden_service_name">unable to read Onion service name</string>
   <string name="unable_to_start_tor">Unable to start Tor:</string>
   <string name="unable_to_reset_tor">Reboot your device, unable to reset Tor!</string>
   <string name="pref_use_sys_iptables_title">Use Default Iptables</string>
@@ -336,9 +336,9 @@
   <string name="note_only_standard_tor_bridges_work_on_intel_x86_atom_devices">NOTE: Only standard Tor bridges work on Intel X86/ATOM devices</string>
 
     <string name="vpn_default_world">World (Location)</string>
-    <string name="hidden_services">Hidden Services</string>
-    <string name="title_activity_hidden_services">Hidden Services</string>
-    <string name="menu_hidden_services">Hidden Services</string>
+    <string name="hidden_services">Onion Services</string>
+    <string name="title_activity_hidden_services">Onion Services</string>
+    <string name="menu_hidden_services">Onion Services</string>
     <string name="save">Save</string>
     <string name="ports">Ports</string>
     <string name="local_port">Local Port</string>
