--- a/orbotservice/src/main/res/values/strings.xml
+++ b/orbotservice/src/main/res/values/strings.xml
@@ -201,11 +201,11 @@
   <string name="reachable_ports">Reachable ports</string>
   <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
   <string name="enter_ports">Enter ports</string>
-  <string name="enable_hidden_services">Hidden Service Hosting</string>
+  <string name="enable_hidden_services">Onion Service Hosting</string>
   <string name="run_servers_accessible_via_the_tor_network">allow on-device server to be accessible via the Tor network</string>
-  <string name="enter_localhost_ports_for_hidden_services">enter localhost ports for hidden services</string>
-  <string name="hidden_service_ports">Hidden Service Ports</string>
-  <string name="the_addressable_name_for_your_hidden_service_generated_automatically_">the addressable name for your hidden service (generated automatically)</string>
+  <string name="enter_localhost_ports_for_hidden_services">enter localhost ports for Onion services</string>
+  <string name="hidden_service_ports">Onion Service Ports</string>
+  <string name="the_addressable_name_for_your_hidden_service_generated_automatically_">the addressable name for your Onion service (generated automatically)</string>
   <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">enable debug log to output (must use adb or aLogCat to view)</string>
   <string name="project_home">Project Home(s): </string>
   <string name="project_urls">https://www.torproject.org/docs/android\nhttps://guardianproject.info/apps/orbot/</string>
@@ -216,11 +216,11 @@
   <string name="libevent_version">LibEvent v2.0.21: http://www.monkey.org/~provos/libevent/</string>
   <string name="iptables_version">IPtables v1.4.21: http://www.netfilter.org</string>
   <string name="openssl_version">OpenSSL v1.0.1q: http://www.openssl.org</string>
-  <string name="hidden_service_request">An app wants to open hidden server port %S to the Tor network. This is safe if you trust the app.</string>
+  <string name="hidden_service_request">An app wants to open Onion server port %S to the Tor network. This is safe if you trust the app.</string>
   <string name="found_existing_tor_process">found existing Tor process&#8230;</string>
   <string name="something_bad_happened">Something bad happened. Check the log</string>
-  <string name="hidden_service_on">hidden service on:</string>
-  <string name="unable_to_read_hidden_service_name">unable to read hidden service name</string>
+  <string name="hidden_service_on">Onion service on:</string>
+  <string name="unable_to_read_hidden_service_name">unable to read Onion service name</string>
   <string name="unable_to_start_tor">Unable to start Tor:</string>
   <string name="unable_to_reset_tor">Reboot your device, unable to reset Tor!</string>
   <string name="pref_use_sys_iptables_title">Use Default Iptables</string>
