--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,7 +217,7 @@
   <string name="libevent_version">LibEvent v2.0.23: http://www.monkey.org/~provos/libevent/</string>
   <string name="iptables_version">IPtables v1.4.21: http://www.netfilter.org</string>
   <string name="obfsproxy_version">Obfs4proxy v0.0.8: https://github.com/Yawning/obfs4</string>
-  <string name="openssl_version">OpenSSL v1.1.1h: http://www.openssl.org</string>
+  <string name="openssl_version">OpenSSL v1.1.1i: http://www.openssl.org</string>
   <string name="hidden_service_request">An app wants to open Onion server port %1$s to the Tor network. This is safe if you trust the app.</string>
   <string name="found_existing_tor_process">found existing Tor process&#8230;</string>
   <string name="something_bad_happened">Something bad happened. Check the log</string>
